# gods_eye

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  gods_eye.py  pyproject.toml  report_template.html  requirements.txt
.github/workflows/: ci.yml
openclaw/: __init__.py  cli.py  config.py
openclaw/bridge/: scanner.py
openclaw/cops/: engine.py  scorer.py  state_machine.py  timeline.py
openclaw/db/: database.py  models.py
openclaw/disclosure/: confidence.py  generator.py  llm_router.py  prompts.py
openclaw/onsa/: engine.py  export.py  models.py  verify.py
openclaw/portal/: app.py  ws.py
openclaw/portal/routes/: audit.py  auth.py  disclosure.py  incidents.py  scans.py
openclaw/portal/static/: style.css
openclaw/portal/templates/: dashboard.html
